--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
         "vlucas/phpdotenv": "^5.6",
         "openai-php/client": "^0.9.2",
         "guzzlehttp/guzzle": "^7.8",
-        "spatie/pdf-to-text": "^1.52"
+        "spatie/pdf-to-text": "^1.52",
+        "symfony/html-sanitizer": "^6.4",
+        "johngrogg/ics-parser": "^3.4"
     },
     "config": {
         "allow-plugins": {
