--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@ POSTMARK_API_KEY=""
 FROM_EMAIL="from@example.com"
 TO_EMAIL="to@example.com"
 LOG_DIR="/var/log/email-to-ics"
-WEBHOOK_AUTH_KEY="randomstring"
+GOOGLE_MAPS_API_KEY=""
 
 HTTP_AUTH_USERNAME="user"
 HTTP_AUTH_PASSWORD="pass"
