--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,12 @@
 OPENAI_API_KEY=""
 POSTMARK_API_KEY=""
-FROM_EMAIL="from@example.com"
-TO_EMAIL="to@example.com"
+
+FROM_TENTATIVE_EMAIL="tentative@postmark.example.com"
+FROM_CONFIRMED_EMAIL="confirmed@postmark.example.com"
+TO_TENTATIVE_EMAIL="tentative@example.com"
+TO_CONFIRMED_EMAIL="confirmed@example.com"
+
+ERROR_EMAIL="errors@example.com"
 LOG_DIR="/var/log/email-to-ics"
 GOOGLE_MAPS_API_KEY=""
 
