--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "guzzlehttp/guzzle": "^7.8",
         "spatie/pdf-to-text": "^1.52",
         "symfony/html-sanitizer": "^6.4",
-        "johngrogg/ics-parser": "^3.4"
+        "johngrogg/ics-parser": "^3.4",
+        "html2text/html2text": "^4.3"
     },
     "config": {
         "allow-plugins": {
