Use o1-mini and add json schema validation, add options to html to provide additional instructions and pick if tentative or confirmed

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "spatie/pdf-to-text": "^1.52",
         "symfony/html-sanitizer": "^6.4",
         "johngrogg/ics-parser": "^3.4",
-        "html2text/html2text": "^4.3"
+        "html2text/html2text": "^4.3",
+        "opis/json-schema": "^2.4"
     },
     "config": {
         "allow-plugins": {
