--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,14 @@
-OPENAI_API_KEY=""
 POSTMARK_API_KEY=""
 
-FROM_TENTATIVE_EMAIL="tentative@postmark.example.com"
-FROM_CONFIRMED_EMAIL="confirmed@postmark.example.com"
+FROM_EMAIL=""
+
+INBOUND_CONFIRMED_EMAIL="confirmed@example.com"
+INBOUND_TENTATIVE_EMAIL="tentative@example.com"
+
 TO_TENTATIVE_EMAIL="tentative@example.com"
 TO_CONFIRMED_EMAIL="confirmed@example.com"
-
 ERROR_EMAIL="errors@example.com"
+
 LOG_DIR="/var/log/email-to-ics"
 GOOGLE_MAPS_API_KEY=""
 
@@ -14,3 +16,10 @@ HTTP_AUTH_USERNAME="user"
 HTTP_AUTH_PASSWORD="pass"
 
 OPENAI_RETRIES=3
+
+AI_PROVIDER="openai" # openai, anthropic, deepseek
+AI_MODEL="o3-mini" # o3-mini, deepseek-reasoner, claude-3-7-sonnet-20250219
+
+OPENAI_API_KEY=""
+DEEPSEEK_API_KEY=""
+ANTHROPIC_KEY=""
