--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,11 +18,11 @@
       "program": "",
       "cwd": "${workspaceRoot}",
       "port": 9003,
-      "serverReadyAction": {
-        "pattern": "Development Server \\(http://localhost:([0-9]+)\\) started",
-        "uriFormat": "http://localhost:%s",
-        "action": "openExternally"
-      }
+//      "serverReadyAction": {
+//        "pattern": "Development Server \\(http://localhost:([0-9]+)\\) started",
+//        "uriFormat": "http://localhost:%s",
+//        "action": "openExternally"
+//      }
     }
   ]
 }
