--- a/.env.template
+++ b/.env.template
@@ -23,3 +23,4 @@ AI_MODEL="o3-mini" # o3-mini, deepseek-reasoner, claude-3-7-sonnet-20250219
 OPENAI_API_KEY=""
 DEEPSEEK_API_KEY=""
 ANTHROPIC_KEY=""
+OPENROUTER_KEY=""
