--- a/.env.template
+++ b/.env.template
@@ -24,3 +24,5 @@ OPENAI_API_KEY=""
 DEEPSEEK_API_KEY=""
 ANTHROPIC_KEY=""
 OPENROUTER_KEY=""
+
+ALLOWED_MODELS='["anthropic/claude-3.7-sonnet", "google/gemini-2.5-pro-preview-03-25", "openai/o4-mini-high", "openai/o3"]'
