cli mode, send html email to postmark

--- a/.env.template
+++ b/.env.template
@@ -3,26 +3,19 @@ POSTMARK_API_KEY=""
 FROM_EMAIL=""
 
 INBOUND_CONFIRMED_EMAIL="confirmed@example.com"
-INBOUND_TENTATIVE_EMAIL="tentative@example.com"
 
 TO_TENTATIVE_EMAIL="tentative@example.com"
 TO_CONFIRMED_EMAIL="confirmed@example.com"
 ERROR_EMAIL="errors@example.com"
 
-LOG_DIR="/var/log/email-to-ics"
 GOOGLE_MAPS_API_KEY=""
 
 HTTP_AUTH_USERNAME="user"
 HTTP_AUTH_PASSWORD="pass"
 
-OPENAI_RETRIES=3
+AI_MODEL="o3-mini" # Fallback/override model if specified. The primary default is usually set by DEFAULT_MODEL or by code logic.
 
-AI_PROVIDER="openai" # openai, anthropic, deepseek
-AI_MODEL="o3-mini" # o3-mini, deepseek-reasoner, claude-3-7-sonnet-20250219
-
-OPENAI_API_KEY=""
-DEEPSEEK_API_KEY=""
-ANTHROPIC_KEY=""
 OPENROUTER_KEY=""
 
-ALLOWED_MODELS='["anthropic/claude-3.7-sonnet", "google/gemini-2.5-pro-preview-03-25", "openai/o4-mini-high", "openai/o3"]'
+ALLOWED_MODELS=anthropic/claude-3.7-sonnet:thinking,google/gemini-2.5-flash-preview:thinking,openai/o4-mini-high,openai/o3,openai/gpt-4.1,google/gemini-2.5-pro-preview
+DEFAULT_MODEL="google/gemini-2.5-pro-preview"
