--- a/ios-share-app/App/EmailToICS.entitlements
+++ b/ios-share-app/App/EmailToICS.entitlements
@@ -2,12 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>com.apple.security.app-sandbox</key>
-  <true/>
-  <key>com.apple.security.application-groups</key>
-  <array>
-    <string>group.com.example.emailtoics</string>
-  </array>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.tls.email-to-ics</string>
+	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.tls.email-to-ics.shared</string>
+	</array>
 </dict>
 </plist>
-
