--- a/ios-share-app/MacApp/EmailToICSMac.entitlements
+++ b/ios-share-app/MacApp/EmailToICSMac.entitlements
@@ -6,8 +6,11 @@
   <true/>
   <key>com.apple.security.application-groups</key>
   <array>
-    <string>group.com.example.emailtoics</string>
+    <string>group.com.tls.email-to-ics</string>
+  </array>
+  <key>keychain-access-groups</key>
+  <array>
+    <string>$(AppIdentifierPrefix)com.tls.email-to-ics.shared</string>
   </array>
 </dict>
 </plist>
-
