--- a/ios-share-app/MacShareExtension/ShareExtension.entitlements
+++ b/ios-share-app/MacShareExtension/ShareExtension.entitlements
@@ -6,7 +6,7 @@
   <true/>
   <key>com.apple.security.application-groups</key>
   <array>
-    <string>group.com.example.emailtoics</string>
+    <string>group.com.tls.email-to-ics</string>
   </array>
   <key>keychain-access-groups</key>
   <array>
