--- a/ios-share-app/App/Info.plist
+++ b/ios-share-app/App/Info.plist
@@ -29,6 +29,15 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+    <key>BGTaskSchedulerPermittedIdentifiers</key>
+    <array>
+        <string>com.tls.email-to-ics.queueprocess</string>
+    </array>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>processing</string>
+        <string>fetch</string>
+    </array>
     <key>LSApplicationQueriesSchemes</key>
     <array>
         <string>emailtoics</string>
