Log postmark requests on DEBUG log level

--- a/.env.template
+++ b/.env.template
@@ -27,3 +27,5 @@ OXYLABS_PASSWORD=""
 
 # Scrapefly API key for fallback when regular fetching fails
 SCRAPEFLY_API_KEY="scp-live-xxxxxxxxxx"
+
+LOG_LEVEL=info
